force-app/main/default/objects/Agreement__c/fields/Access_and_Utility_w_in_Parcel__c.field-meta.xml
<CustomField>
    <fullName>Access_and_Utility_w_in_Parcel__c</fullName>
    <label>Access and Utility w/in Parcel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>