force-app/main/default/objects/Agreement__c/fields/Agreement_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Commencement_Date__c</fullName>
    <label>Agreement Commencement Date**</label>
    <type>Date</type>
</CustomField>