force-app/main/default/objects/Agreement__c/fields/Agreement_Total_Commenced__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Total_Commenced__c</fullName>
    <label>Agreement Total Commenced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>