force-app/main/default/objects/Agreement__c/fields/AgreementID__c.field-meta.xml
<CustomField>
    <fullName>AgreementID__c</fullName>
    <label>AgreementID (TBD)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>