force-app/main/default/objects/Agreement__c/fields/All_Assignments_Require_Consent__c.field-meta.xml
<CustomField>
    <fullName>All_Assignments_Require_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Assignments Require Consent</label>
    <type>Checkbox</type>
</CustomField>