force-app/main/default/objects/Agreement__c/fields/All_In_Commenced__c.field-meta.xml
<CustomField>
    <fullName>All_In_Commenced__c</fullName>
    <formula>IF(Is_Commenced__c,  LeaseNet_Monthly_Rate__c  + Agreement_Total_Commenced__c, Agreement_Total_Commenced__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All In - Commenced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>