force-app/main/default/objects/Agreement__c/fields/All_In_Executed_Not_Commenced__c.field-meta.xml
<CustomField>
    <fullName>All_In_Executed_Not_Commenced__c</fullName>
    <formula>IF(Is_Commenced__c, Agreement_Executed_Not_Commenced__c, Initial_Rent__c+Agreement_Executed_Not_Commenced__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All In - Executed - Not Commenced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>