force-app/main/default/objects/Agreement__c/fields/All_In_Total__c.field-meta.xml
<CustomField>
    <fullName>All_In_Total__c</fullName>
    <formula>All_In_Commenced__c + All_In_Executed_Not_Commenced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All In - Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>