force-app/main/default/objects/Agreement__c/fields/Amendment_Entity__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Entity__c</fullName>
    <label>Amendment Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PI Tower Development LLC</fullName>
            </value>
            <value>
                <fullName>Harmoni Towers AssetCo, LLC</fullName>
            </value>
            <value>
                <fullName>Parallel Towers III, LLC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>