force-app/main/default/objects/Agreement__c/fields/Amendment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Terms__c</fullName>
    <label>Amendment Terms</label>
    <type>TextArea</type>
</CustomField>