force-app/main/default/objects/Agreement__c/fields/Anchor_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Anchor Agreement</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Anchor Agreement&apos;s Project should match with current Agreement&apos;s Project</errorMessage>
        <filterItems>
            <field>Agreement__c.Agreement_Type__c</field>
            <operation>equals</operation>
            <value>Anchor</value>
        </filterItems>
        <filterItems>
            <field>Agreement__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>Agreement__c.Project__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>SDP Agreements</relationshipLabel>
    <relationshipName>SDP_Anchor_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>