force-app/main/default/objects/Agreement__c/fields/Assignment_Fully_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Fully_Executed_Date__c</fullName>
    <label>Assignment Fully Executed Date</label>
    <type>Date</type>
</CustomField>