force-app/main/default/objects/Agreement__c/fields/Assignment_to_Affiliates_wo_consent__c.field-meta.xml
<CustomField>
    <fullName>Assignment_to_Affiliates_wo_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Assignment to Affiliates without consent (y/n)</inlineHelpText>
    <label>Assignment to Affiliates w/o consent</label>
    <type>Checkbox</type>
</CustomField>