force-app/main/default/objects/Agreement__c/fields/Assignment_to_Entity_wo_Consent__c.field-meta.xml
<CustomField>
    <fullName>Assignment_to_Entity_wo_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment to Entity w/o consent</label>
    <type>Checkbox</type>
</CustomField>