force-app/main/default/objects/Agreement__c/fields/Assignor_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignor_Entity_Name__c</fullName>
    <label>Assignor Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>