force-app/main/default/objects/Agreement__c/fields/AT_T_Approved_Capital_Investment__c.field-meta.xml
<CustomField>
    <fullName>AT_T_Approved_Capital_Investment__c</fullName>
    <label>AT&amp;T Approved Capital Investment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>