force-app/main/default/objects/Agreement__c/fields/AT_T_PO__c.field-meta.xml
<CustomField>
    <fullName>AT_T_PO__c</fullName>
    <label>AT&amp;T PO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>