force-app/main/default/objects/Agreement__c/fields/AT_T_SDP_DocuSign_Execution__c.field-meta.xml
<CustomField>
    <fullName>AT_T_SDP_DocuSign_Execution__c</fullName>
    <label>AT&amp;T SDP DocuSign Execution</label>
    <type>Date</type>
</CustomField>