force-app/main/default/objects/Agreement__c/fields/AT_T_SDP_Zoning_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>AT_T_SDP_Zoning_Approved_Date__c</fullName>
    <label>AT&amp;T SDP Zoning Approved Date</label>
    <type>Date</type>
</CustomField>