force-app/main/default/objects/Agreement__c/fields/Base_Rent_Frequency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_Frequency_Amount__c</fullName>
    <label>Base Rent Frequency % / Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>