force-app/main/default/objects/Agreement__c/fields/Base_Rent_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Base_Rent_Payment_Frequency__c</fullName>
    <label>Base Rent Payment Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>