force-app/main/default/objects/Agreement__c/fields/Budget_Hard_Capex__c.field-meta.xml
<CustomField>
    <fullName>Budget_Hard_Capex__c</fullName>
    <label>Budget Hard Capex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>