force-app/main/default/objects/Agreement__c/fields/Business_unit__c.field-meta.xml
<CustomField>
    <fullName>Business_unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPCo</fullName>
            </value>
            <value>
                <fullName>Harmoni Towers 3.0</fullName>
            </value>
            <value>
                <fullName>DevCo</fullName>
            </value>
            <value>
                <fullName>Galaxi</fullName>
            </value>
            <value>
                <fullName>AAFES</fullName>
            </value>
            <value>
                <fullName>BSNF</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>