force-app/main/default/objects/Agreement__c/fields/Buyout_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Buyout_Multiple__c</fullName>
    <formula>if(X12_31_Annual_Rent_Savings__c!= 0, Total_GLBO_Cost__c / X12_31_Annual_Rent_Savings__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyout Multiple</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>