force-app/main/default/objects/Agreement__c/fields/Capital_Contributions_Income__c.field-meta.xml
<CustomField>
    <fullName>Capital_Contributions_Income__c</fullName>
    <label>Capital Contributions - Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>