force-app/main/default/objects/Agreement__c/fields/Capital_Contributions_Income_Details__c.field-meta.xml
<CustomField>
    <fullName>Capital_Contributions_Income_Details__c</fullName>
    <label>Capital Contributions - Income Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>