force-app/main/default/objects/Agreement__c/fields/Colocation_Pass_Through__c.field-meta.xml
<CustomField>
    <fullName>Colocation_Pass_Through__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colocation Pass Through</label>
    <type>Checkbox</type>
</CustomField>