force-app/main/default/objects/Agreement__c/fields/Combined_Amd_Reason_1__c.field-meta.xml
<CustomField>
    <fullName>Combined_Amd_Reason_1__c</fullName>
    <label>Combined Amd Reason 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>