force-app/main/default/objects/Agreement__c/fields/Commenced__c.field-meta.xml
<CustomField>
    <fullName>Commenced__c</fullName>
    <formula>IF(Is_Commenced__c,  LeaseNet_Monthly_Rate__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commenced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>