force-app/main/default/objects/Agreement__c/fields/Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Date__c</fullName>
    <label>Commencement/Exercise Option Date(TBD)</label>
    <type>Date</type>
</CustomField>