force-app/main/default/objects/Agreement__c/fields/Commencement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Notes__c</fullName>
    <label>Commencement Notes</label>
    <type>TextArea</type>
</CustomField>