force-app/main/default/objects/Agreement__c/fields/Compound_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Compound_Sq_Ft__c</fullName>
    <label>Compound Sq Ft</label>
    <length>50</length>
    <type>Text</type>
</CustomField>