force-app/main/default/objects/Agreement__c/fields/Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidentiality</label>
    <type>Checkbox</type>
</CustomField>