force-app/main/default/objects/Agreement__c/fields/Confidentiality_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Exclusions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confidentiality Exclusions</label>
    <type>Checkbox</type>
</CustomField>