force-app/main/default/objects/Agreement__c/fields/Contract_Fully_Executed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Fully_Executed__c</fullName>
    <label>Contract Fully Executed</label>
    <type>Date</type>
</CustomField>