force-app/main/default/objects/Agreement__c/fields/Contracting_Company_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Company_Landlord__c</fullName>
    <label>Contracting Company (Landlord)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>