force-app/main/default/objects/Agreement__c/fields/Current_Term_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Term_Expiration_Date__c</fullName>
    <label>Initial Term Expiration Date**</label>
    <type>Date</type>
</CustomField>