force-app/main/default/objects/Agreement__c/fields/Customer_Legal_Entity_Field__c.field-meta.xml
<CustomField>
    <fullName>Customer_Legal_Entity_Field__c</fullName>
    <label>Customer Legal Entity Field</label>
    <type>TextArea</type>
</CustomField>