force-app/main/default/objects/Agreement__c/fields/Date_of_Requested_Revised_Termination__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Requested_Revised_Termination__c</fullName>
    <label>Date of Requested Revised Termination</label>
    <type>Date</type>
</CustomField>