force-app/main/default/objects/Agreement__c/fields/Date_of_Termination_Notice_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Termination_Notice_Received__c</fullName>
    <label>Date of Termination Notice Received</label>
    <type>Date</type>
</CustomField>