force-app/main/default/objects/Agreement__c/fields/DD_Option_Current_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Option_Current_Expiration_Date__c</fullName>
    <label>DD/Option Current Expiration Date</label>
    <type>Date</type>
</CustomField>