force-app/main/default/objects/Agreement__c/fields/DD_Option_Fee_Renewal__c.field-meta.xml
<CustomField>
    <fullName>DD_Option_Fee_Renewal__c</fullName>
    <label>DD/Option Fee Renewal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>