force-app/main/default/objects/Agreement__c/fields/DD_Option_Initial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DD_Option_Initial_Start_Date__c</fullName>
    <label>DD/Option Initial Start Date</label>
    <type>Date</type>
</CustomField>