force-app/main/default/objects/Agreement__c/fields/DD_Option_Initial_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>DD_Option_Initial_Term_Length__c</fullName>
    <label>DD/Option Initial Term Length(Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>