force-app/main/default/objects/Agreement__c/fields/DD_Option_Notes__c.field-meta.xml
<CustomField>
    <fullName>DD_Option_Notes__c</fullName>
    <label>DD/Option Notes</label>
    <type>TextArea</type>
</CustomField>