force-app/main/default/objects/Agreement__c/fields/DD_Option_Number_Of_Renewals__c.field-meta.xml
<CustomField>
    <fullName>DD_Option_Number_Of_Renewals__c</fullName>
    <label>DD/Option Number of Renewals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>