force-app/main/default/objects/Agreement__c/fields/DD_Option_Rent_Credit__c.field-meta.xml
<CustomField>
    <fullName>DD_Option_Rent_Credit__c</fullName>
    <label>DD/Option Rent Credit**</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>