force-app/main/default/objects/Agreement__c/fields/Deed_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Deed_Recorded__c</fullName>
    <label>Deed Recorded</label>
    <type>Date</type>
</CustomField>