force-app/main/default/objects/Agreement__c/fields/Deed_Sent__c.field-meta.xml
<CustomField>
    <fullName>Deed_Sent__c</fullName>
    <label>Deed Sent</label>
    <type>Date</type>
</CustomField>