force-app/main/default/objects/Agreement__c/fields/Deferred_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Deferred_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deferred Indicator</label>
    <type>Checkbox</type>
</CustomField>