force-app/main/default/objects/Agreement__c/fields/Do_Not_Push_To_Netgain__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Push_To_Netgain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Push To Netgain</label>
    <type>Checkbox</type>
</CustomField>