force-app/main/default/objects/Agreement__c/fields/Due_Diligence_Expiration_Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Expiration_Email_Subject__c</fullName>
    <formula>IF(
					Due_Diligence_Expiration_Remainder_Days__c = 1,   
				 &apos;DD/Option Current Expiration - &apos;+  TEXT(Due_Diligence_Expiration_Remainder_Days__c) + &apos; Day Left&apos;,
					&apos;DD/Option Current Expiration - &apos;+  TEXT(Due_Diligence_Expiration_Remainder_Days__c) + &apos; Days Left&apos;
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Diligence Expiration Email Subject</label>
    <type>Text</type>
</CustomField>