force-app/main/default/objects/Agreement__c/fields/Due_Diligence_Expiration_Remainder_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Expiration_Remainder_Days__c</fullName>
    <formula>DD_Option_Current_Expiration_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Diligence Expiration Remainder Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>