force-app/main/default/objects/Agreement__c/fields/Due_Diligence_Fee_renewal_amounts__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Fee_renewal_amounts__c</fullName>
    <label>Due Diligence Fee Renewal Amounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>