force-app/main/default/objects/Agreement__c/fields/Due_Diligence_Initial_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Initial_Start_Date__c</fullName>
    <label>Due Diligence Initial Start Date</label>
    <type>Date</type>
</CustomField>