force-app/main/default/objects/Agreement__c/fields/Due_Diligence_Notice_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Notice_Requirement__c</fullName>
    <label>Due Diligence Notice Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>