force-app/main/default/objects/Agreement__c/fields/Due_Diligence_Option_Notes__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Option_Notes__c</fullName>
    <label>Due Diligence/Option Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>