force-app/main/default/objects/Agreement__c/fields/Due_Diligence_Option_Rent_Credit__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Option_Rent_Credit__c</fullName>
    <label>Due Diligence/Option Rent Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>