force-app/main/default/objects/Agreement__c/fields/Due_Diligence_or_Option__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_or_Option__c</fullName>
    <label>Due Diligence or Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Due Diligence</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>