force-app/main/default/objects/Agreement__c/fields/Due_Diligence_Renewal_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Renewal_Term_Length__c</fullName>
    <label>Due Diligence Renewal Term Length(Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>