force-app/main/default/objects/Agreement__c/fields/Due_Diligence_Term_Comment_Field__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Term_Comment_Field__c</fullName>
    <label>Due Diligence Term Comment Field</label>
    <type>TextArea</type>
</CustomField>