force-app/main/default/objects/Agreement__c/fields/Due_Diligene_Renewal_of_Terms__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligene_Renewal_of_Terms__c</fullName>
    <label>Due Diligene Renewal # of Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>