force-app/main/default/objects/Agreement__c/fields/Easement_Agreement_Purchase_Deed_Entity__c.field-meta.xml
<CustomField>
    <fullName>Easement_Agreement_Purchase_Deed_Entity__c</fullName>
    <label>Easement Agreement/Purchase Deed Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Harmoni Towers AssetCo, LLC</fullName>
            </value>
            <value>
                <fullName>Harmoni Towers AssetCo II, LLC</fullName>
            </value>
            <value>
                <fullName>Harmoni Towers LLC</fullName>
                <isActive>false</isActive>
                <label>Harmoni Towers LLC</label>
            </value>
            <value>
                <fullName>Harmoni Towers  LLC</fullName>
                <isActive>false</isActive>
                <label>Harmoni Towers  LLC</label>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parallel Towers III, LLC</fullName>
                <isActive>false</isActive>
                <label>Parallel Towers III, LLC</label>
            </value>
            <value>
                <fullName>PI Telecom Infrastructure, LLC</fullName>
            </value>
            <value>
                <fullName>PI Tower Development LLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>