force-app/main/default/objects/Agreement__c/fields/Easement_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Easement_Recorded__c</fullName>
    <label>Easement Recorded</label>
    <type>Date</type>
</CustomField>