force-app/main/default/objects/Agreement__c/fields/Easement_Sent__c.field-meta.xml
<CustomField>
    <fullName>Easement_Sent__c</fullName>
    <label>Easement Sent</label>
    <type>Date</type>
</CustomField>