force-app/main/default/objects/Agreement__c/fields/Easement_Term__c.field-meta.xml
<CustomField>
    <fullName>Easement_Term__c</fullName>
    <label>Easement Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>