force-app/main/default/objects/Agreement__c/fields/Easement_Term_Length_Years__c.field-meta.xml
<CustomField>
    <fullName>Easement_Term_Length_Years__c</fullName>
    <label>Easement Term Length(Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>