force-app/main/default/objects/Agreement__c/fields/Easement_Termination_Sent__c.field-meta.xml
<CustomField>
    <fullName>Easement_Termination_Sent__c</fullName>
    <label>Easement Termination Sent</label>
    <type>Date</type>
</CustomField>