force-app/main/default/objects/Agreement__c/fields/egnyte_folder_path__c.field-meta.xml
<CustomField>
    <fullName>egnyte_folder_path__c</fullName>
    <formula>Site__r.Egnytefolderpath_Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>egnyte_folder_path</label>
    <type>Text</type>
</CustomField>