force-app/main/default/objects/Agreement__c/fields/EqualToTodayDate__c.field-meta.xml
<CustomField>
    <fullName>EqualToTodayDate__c</fullName>
    <formula>if( Rent_Commencement_Date__c == Today(),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EqualToTodayDate</label>
    <type>Checkbox</type>
</CustomField>